# build-initial-hubspot-data

./: .gitignore  README.md  main.py  pyproject.toml
.github/instructions/: copilot-commit-message.instructions.md
.github/workflows/: python-test.yml
project_name/: main.py
src/build_initial_hubspot_data/: main.py
tests/: test_main.py
