[tool.poetry]
name = "project-name" # TODO set project name
version = "0.0.0" # Do NOT set version manually
description = "Template for python projects" # TODO set description
authors = ["Rémy Lopez"] # TODO set authors
readme = "README.md"
packages = [{include = "project_name"}] # TODO set python packages to include

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ['ALL']
ignore = ['FA']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['D']
'tests/**' = ['D', 'S101', 'ANN', 'PLR', 'ARG']

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"