[project]
name = "build-initial-hubspot-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.13",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[project.scripts]
build-initial-hubspot-data = "build_initial_hubspot_data.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = [
  "tests"
]

[tool.ruff.lint]
select = ['ALL']
ignore = ['FA', 'D', 'E501']

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['S101', 'ANN', 'PLR', 'ARG', 'INP001', 'E501']

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
